--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.25.3",
     "node-fetch": "^3.3.1",
+    "node-fetch-native": "^1.0.2",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
